--- a/style.css
+++ b/style.css
@@ -7,24 +7,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    gap: 70px;
     background-image: linear-gradient(to right,#204FE3 , #E34FE3, #E34F7A);
-    
-    
 }
 
 #wrapper {
-    background-color: white;
-    opacity: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 70px;
 }
 
-#container {
+#grid {
     width: 660px;
     height: 660px;
     display: inline-grid;
     box-shadow: 2px 15px 15px;
     opacity: 1;
+    background-color: antiquewhite;
+    border-radius: 8px;
 }
 
 .item {
@@ -36,10 +37,9 @@ body {
 
 .hovered {
     background-color: black;
-    opacity: 1;
 }
 
-.reset {
+button {
     margin-top: 100px;
     padding: 3px  17px 3px 17px;
     background-color: #6ADCA5;
